--- a/index.html
+++ b/index.html
@@ -1,14 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="proxystyle.css">
+  <title>Proxy</title>
 </head>
+
 <body>
-    <div id="simexp">
+
+  <header class="eventTopBarTable">
+    <div class="eventTopBarCellOne">
+      <img class="airbnbLogo" src='https://cdn.iconscout.com/public/images/icon/free/png-512/airbnb-logo-social-media-3cf7b6aa5ab8cfd5-512x512.png'
+      />
     </div>
-    <script src="/bundle.js/:3001"></script>
+    <div class="eventTopBarCellTwo">
+    </div>
+  </header>
+  <div class="bigWrapper">
+    <div class="innerWrapper">
+      <div class="leftSide">
+        <div id="header-boi"></div>
+        <div id="reviewModel"></div>
+      </div>
+      <div class="rightSide">
+        <div class="innerRight">
+          <div id="sidebar"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div id="simexp">Hello simexp is not working</div>
+    <script src="/bundle.js/3002"></script>
+    <script src="/bundle.js/3004"></script>
+    <script src="https://s3-us-west-1.amazonaws.com/jkwonsbundle/client/bundle.js"></script>
+    <script src="https://s3-us-west-1.amazonaws.com/neilmartinhrfecbundle/bundle.js"></script>
+    
+    
 </body>
 </html>
